@@ -1,0 +1,23 @@
+<%
+  flash_code_base = ['http://fpdownload.macromedia.com/',
+    'pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0'].join('')
+  swf_path = File.join(RAILS_ROOT, 'public/meteor_strike.swf')
+  swf_timestamp = File.mtime(swf_path).to_i
+%>
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+ codebase="<%= flash_code_base %>" width="0" height="0"
+ id="meteor_strike_<%= @meteor_strike %>">
+  <param name="allowScriptAccess" value="sameDomain" />
+  <param name="FlashVars" value="<%= flash_vars %>" />
+  <param name="movie" value="/meteor_strike.swf?<%= swf_timestamp %>" />
+  <param name="menu" value="false" />
+  <param name="quality" value="high" />
+  <param name="devicefont" value="true" />
+  <param name="bgcolor" value="#ffffff" />
+  <embed src="/meteor_strike.swf?<%= swf_timestamp %>" menu="false"
+   quality="high" devicefont="true" bgcolor="#ffffff" width="0" height="0"
+   swLiveConnect="true" id="meteor_strike_<%= @meteor_strike %>"
+   name="meteor_strike_<%= @meteor_strike %>" flashvars="<%= flash_vars %>"
+   allowScriptAccess="sameDomain" type="application/x-shockwave-flash"
+   pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
